--- a/index.html
+++ b/index.html
@@ -242,6 +242,6 @@
       </footer>
     </main>
 
-    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
+    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/Florvin-04/insure-landing-page-master.git">FLORVIN</a>.</div>
   </body>
 </html>
